--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,21 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "~1.3.3"
 gfx-hal = "0.9.0"
+shaderc = "0.8.0"
+image = "0.24.3"
+serde = {version = "1.0.144", features = ["derive"]}
+winit = "0.27.2"
+
+[target .'cfg(target_os = "macos")' .dependencies.backend]
+package = "gfx-backend-metal"
+version = "=0.6.2"
+
+[target .'cfg(windows)' .dependencies.backend]
+package = "gfx-backend-dx12"
+version = "=0.6.3"
+
+[target .'cfg(all(unix, not(target_os = "macos")))' .dependencies.backend]
+package = "gfx-backend-vulkan"
+version = "=0.6.1"
