--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ shaderc = "0.8.0"
 image = "0.24.3"
 serde = {version = "1.0.144", features = ["derive"]}
 winit = "0.27.2"
+resa-ecs = {path = "../SkriptR/ecs", version = "0.1.0"}
+
 
 [target .'cfg(target_os = "macos")' .dependencies.backend]
 package = "gfx-backend-metal"
