--- a/resa-renderer/Cargo.toml
+++ b/resa-renderer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "SkriptR"
+name = "resa-renderer"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,8 +14,6 @@ image = "0.24.3"
 serde = {version = "1.0.144", features = ["derive"]}
 winit = "0.27.2"
 glm = "0.2.3"
-resa-ecs = {path = "../SkriptR/ecs", version = "0.1.0"}
-resa-renderer = {path = "../SkriptR/resa-renderer", version = "0.1.0"}
 
 
 [target .'cfg(target_os = "macos")' .dependencies.backend]
