--- a/resa-renderer/Cargo.toml
+++ b/resa-renderer/Cargo.toml
@@ -9,7 +9,8 @@ edition = "2021"
 bincode = "~1.3.3"
 gfx-hal = "0.9.0"
 #gfx-backend-empty = "0.9.0"
-shaderc = "0.8.0"
+gfx-auxil = "0.10.0"
+glsl-to-spirv = "0.1.7"
 image = "0.24.3"
 serde = {version = "1.0.144", features = ["derive"]}
 winit = "0.27.2"
