--- a/resa-renderer/Cargo.toml
+++ b/resa-renderer/Cargo.toml
@@ -22,7 +22,7 @@ package = "gfx-backend-metal"
 version = "0.9.0"
 
 [target .'cfg(windows)' .dependencies.backend]
-package = "gfx-backend-dx12"
+package = "gfx-backend-vulkan"
 version = "0.9.0"
 
 [target .'cfg(all(unix, not(target_os = "macos")))' .dependencies.backend]
